--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-920.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-209.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-2.77MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-205.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-950.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-939.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-920.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.08MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-1.59MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇩🇪 德国-631.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-806.9KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇮🇹 意大利-718.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-205.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-205.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-205.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-205.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-205.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-205.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-205.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
