--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-950.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-939.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-920.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.08MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-865.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.49MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-671.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇩🇪 德国-1.59MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇩🇪 德国-631.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-950.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-939.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-920.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
