--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-865.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-284.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-659.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-1.49MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-671.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-1.59MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇫🇷 法国-3.07MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇩🇪 德国-2.17MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇩🇪 德国-631.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-806.9KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇩🇪 德国-155.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇮🇹 意大利-718.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-865.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-671.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-806.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
